# CG-project

phase1/code/: CMakeLists.txt
phase1/code/engine/: engine.cpp  xml_parser.cpp  xml_parser.hpp
phase1/code/generator/: box.cpp  box.hpp  cone.cpp  cone.hpp  generator.cpp  plane.cpp  plane.hpp  sphere.cpp  sphere.hpp
phase1/code/input/: test_plane2_3.xml  tester.xml
phase1/code/outputs/: box.3d  cone.3d  plane.3d  plane2_3.3d  sphere.3d
phase1/code/utils/: figure.cpp  figure.hpp  point.cpp  point.hpp  ponto.cpp  ponto.hpp  triangle.cpp  triangle.hpp  utils.cpp  utils.hpp
phase2/code/: CMakeLists.txt
phase2/code/engine/: engine.cpp  xml_parser.cpp  xml_parser.hpp
phase2/code/generator/: cone.cpp  generator.cpp  plane.cpp
phase2/code/input/: boneco.xml  sistema_solar.xml  sistema_solar_alinhado.xml  test_figures.xml  test_plane2_3.xml  teste_transforms.xml  tester.xml
phase2/code/outputs/: box.3d  cone_LETSGO.3d  plane.3d  ring.3d  sphere.3d
phase2/code/utils/: figure.cpp  figure.hpp  point.cpp  utils.hpp
phase3/code/: CMakeLists.txt
phase3/code/engine/: catmull.cpp  catmull.hpp  engine.cpp  xml_parser.cpp  xml_parser.hpp
phase3/code/generator/: bezier.cpp  bezier.hpp  generator.cpp  ring.hpp  sphere.cpp
phase3/code/input/: example.xml  sistema_solar_dynamic.xml  test_figures.xml
phase3/code/outputs/: bezier_10.3d  cone.3d
phase3/code/utils/: figure.cpp  figure.hpp  matrix.cpp  matrix.hpp  point.cpp  point.hpp
phase4/code/: CMakeLists.txt
phase4/code/engine/: catmull.cpp  catmull.hpp  color.cpp  color.hpp  engine.cpp  lights.cpp  lights.hpp  xml_parser.cpp  xml_parser.hpp
phase4/code/generator/: bezier.cpp  bezier.hpp  box.cpp  box.hpp  cone.cpp  cone.hpp  generator.cpp  plane.cpp  plane.hpp  ring.cpp  ring.hpp  sphere.cpp  sphere.hpp
phase4/code/input/: example.xml  sistema_solar_dynamic.xml
phase4/code/outputs/: bezier_10.3d  box_2_3.3d  cone_1_2_4_3.3d  plane2_3.3d  plane_1_3.3d  plane_2_3.3d  ring1_3_15.3d  ring_1_2_10.3d  sphere_1_10_10.3d  sphere_1_8_8.3d
phase4/code/utils/: figure.cpp  figure.hpp  matrix.cpp  matrix.hpp  point.cpp  point.hpp  triangle.hpp  utils.hpp
test_files/test_files_phase_1/: test_1_1.xml
test_files/test_files_phase_2/: test_2_1.xml  test_2_2.xml  test_2_3.xml  test_2_4.xml
test_files/test_files_phase_3/: test_3_1.xml  test_3_2.xml
test_files/test_files_phase_4/: test_4_1.xml
